# AG

./: .firebaserc  .gitignore  VERCEL.md  firebase.json  package.json  pnpm-lock.yaml  vercel.json
agentwatch-api/: .dockerignore  .env.example  CLOUD_RUN.md  Dockerfile  README.md  alerts.py  auth_firebase.py  checks.py  database.py  deep_analysis.py  deploy-cloud-run.ps1  firestore.indexes.json  main.py  requirements.txt  test_flag.py
agentwatch-js/: README.md  package.json  register.cjs
agentwatch-js/src/: index.js
agentwatch-sdk/: README.md  pyproject.toml
agentwatch-sdk/agentwatch/: __init__.py  auto_instrument.py  cli.py  interceptor.py  redactor.py  sender.py
agentwatch-sdk/examples/: groq_judge_demo.py  groq_smoke.py
artifacts/agentwatch/: .env.example  index.html  package.json  vercel.json  vite.config.ts
artifacts/agentwatch/.replit-artifact/: artifact.toml
artifacts/agentwatch/src/: App.tsx  index.css
artifacts/agentwatch/src/components/: BrandLogo.tsx  DashboardLayout.tsx
artifacts/agentwatch/src/components/ui/: badge.tsx  button.tsx
artifacts/agentwatch/src/lib/: api.ts  auth-context.tsx  firebase.ts  mock-data.ts
artifacts/agentwatch/src/pages/: Alerts.tsx  ApiKeys.tsx  Dashboard.tsx  Documentation.tsx  ForgotPassword.tsx  Help.tsx  Landing.tsx  Settings.tsx  SignIn.tsx  SignUp.tsx  TraceDetail.tsx  Traces.tsx
attached_assets/: AgentWatch_Cursor_Prompts_1775464221086.md
docs/: PRD.md  orbit-agentwatch-setup.md
runners/: agentwatch.js  agentwatch.py  force_hallucination_flag.py
scripts/: pypi-publish-workflow.yml
