[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwatch-io"
version = "0.1.2"
description = "Production monitoring SDK for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0"]

[project.scripts]
agentwatch = "agentwatch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentwatch*"]
